--- a/react-resume/src/index.css
+++ b/react-resume/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+    font-family: "Mulish";
+    src: local("Mulish"), url("./assets/fonts/Mulish/Mulish-VariableFont_wght.ttf") format("truetype");
+    font-weight: bold;
+}
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
