FIX: Footer Position
Footer position now fixed to bottom of screen even when page's contents are shorter that screen.

--- a/react-resume/src/Components/styles/Footer.css
+++ b/react-resume/src/Components/styles/Footer.css
@@ -1,14 +1,11 @@
 .Footer-Div {
-    position: absolute;
+    position: relative;
     left: 0;
     bottom: 0;
-    right: 0;
-
+    height: 100px;
     display: flex;
     justify-content: space-between;
-
     background-color: #2F3438;
-
 }
 
 .Footer-Rights {
